# research-paper-template-Athlete-Injuries

./: .gitignore  .gitmessage  README.md  mkdocs.yml  netlify.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  offer-web-site-feedback.yml  report-source-code-bug.yml  report-web-site-bug.yaml
.github/workflows/: main.yml
docs/: index.md
docs/abstract/: index.md
docs/background/: index.md
docs/citations/: index.md
docs/data-science/: schedule.md  syllabus.md
docs/discussion/: index.md
docs/img/: ready-to-research.excalidraw
docs/img/illustrate/: data-sets.excalidraw  introduction-technical-skills.excalidraw  knowledge-gap.excalidraw  vscode-text-editor.excalidraw
docs/img/main/: ready-to-research-logo.excalidraw  ready-to-research.excalidraw
docs/introduction/: index.md
docs/methods/: index.md
docs/paper-components/: paper-abstracts.md  paper-titles.md
docs/research-skills/: knowledge-gaps.md  problem-domains.md  setting-goals.md
docs/results/: index.md
docs/stylesheets/: extra.css
docs/technical-skills/: introduction-technical-skills.md  using-mkdocs.md  using-terminal.md  using-vscode.md
files/data-science/NFL injuries/: NFL-injuries-dataset.ipynb  dataAnalysis.ipynb
files/data-science/software-engineering/: explore-github-dataset.ipynb
files/data-science/swimming-injuries/: explore-github-dataset.ipynb
includes/admonitions/: admonish-technical-skills.md
overrides/: main.html
overrides/partials/: copyright.html
scripts/: netlify-docs.sh
