[tool.poetry]
name = "readytoresearch"
version = "0.1.0"
description = ""
authors = ["Gregory M. Kapfhammer <gkapfham@allegheny.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
mkdocs-mermaid2-plugin = "^0.5.2"
mkdocs-print-site-plugin = "^2.0.0"
mkdocs-minify-plugin = "^0.4.1"
jupyterlab = "^3.4.3"
pandas = "^1.4.3"
jupyterlite = {version = "^0.1.0-beta.10", extras = ["all"]}
matplotlib = "^3.5.2"
ipywidgets = "^7.7.1"
seaborn = "^0.11.2"
sklearn = "^0.0"
plotly = "^5.10.0"
nbformat = "^5.4.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
